--- a/src/styles.scss
+++ b/src/styles.scss
@@ -338,7 +338,7 @@ lilguy-component {
 }
 
 /***************DESKTOP STYLES*********/
-@media (min-width: 500px) {
+@media (min-device-width: 500px) {
   .mobile-only {
     display: none;
   }
