--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,7 +29,7 @@ li,
 a {
   color: #fcfbe3;
   font-family: "Muli", sans-serif;
-  font-size: 1.5em;
+  font-size: 50px;
 }
 
 a:link {
@@ -78,7 +78,7 @@ h6 {
 }
 
 p img {
-  max-width: 100%;
+  width: 100%;
 }
 
 button {
@@ -210,7 +210,7 @@ p {
 }
 
 .profile-img {
-  max-width: 50px;
+  max-width: 200px;
   display: block;
 }
 
@@ -221,7 +221,7 @@ p {
 }
 
 .hamburger {
-  max-width: 50px;
+  max-width: 100px;
   display: block;
   flex: 1;
   cursor: pointer;
