--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,112 +1,110 @@
-<div class="container">
-  <h3>Hello! My name is Phil Giammattei.</h3>
-  <img
-    src="assets/images/chicken.jpg"
-    alt="Phil and Luree at the airport!"
-    class="img-content"
-  />
-  <h4>That's pronounced</h4>
+<h3>Hello! My name is Phil Giammattei.</h3>
+<img
+  src="assets/images/chicken.jpg"
+  alt="Phil and Luree at the airport!"
+  class="img-content"
+/>
+<h4>That's pronounced</h4>
 
-  <img class="img-content" src="assets/images/ghee.png" alt="ghee a MA tee" />
+<img class="img-content" src="assets/images/ghee.png" alt="ghee a MA tee" />
 
-  <h4>I live in Pittsburgh with my wife and two cats.</h4>
-  <img
-    src="assets/images/selfie.jpg"
-    alt="Phil and Luree at the airport!"
-    class="img-content"
-  />
-  <hr />
+<h4>I live in Pittsburgh with my wife and two cats.</h4>
+<img
+  src="assets/images/selfie.jpg"
+  alt="Phil and Luree at the airport!"
+  class="img-content"
+/>
+<hr />
 
-  <h1>SKILLS</h1>
-  <ul class="skillslist">
-    <li><h4>Angular</h4></li>
-    <li><h4>Spring REST</h4></li>
-    <li><h4>CSS/SCSS</h4></li>
-    <li><h4>JavaScript/TypeScript</h4></li>
-    <li><h4>React/React Native</h4></li>
-    <li><h4>Shopify/Liquid</h4></li>
-    <li><h4>SwiftUI</h4></li>
-    <li><h4>Agile/Scrum</h4></li>
-  </ul>
-  <hr />
-  <h1>STRENGTHS</h1>
-  <p>
-    I am a skilled <em>communicator</em>, both written and verbal. I understand
-    the importance of storytelling and presentation when persuading or
-    informing. I am capable of expressing complex thoughts in simple terms,
-    which I have used in teaching and mentoring roles to great effect.
-  </p>
-  <p>
-    I am a skilled <em>learner</em>, capable of quickly and efficiently
-    absorbing information and processes, discerning when it is necessary to have
-    a robust theoretical framework and when it is more expedient to learn by
-    steps. I document my learning process such that my notes can be useful for
-    future learners.
-  </p>
+<h1>SKILLS</h1>
+<ul class="skillslist">
+  <li>Angular</li>
+  <li>Spring REST</li>
+  <li>CSS/SCSS</li>
+  <li>JavaScript/TypeScript</li>
+  <li>React/React Native</li>
+  <li>Shopify/Liquid</li>
+  <li>SwiftUI</li>
+  <li>Agile/Scrum</li>
+</ul>
+<hr />
+<h1>STRENGTHS</h1>
+<p>
+  I am a skilled <em>communicator</em>, both written and verbal. I understand
+  the importance of storytelling and presentation when persuading or informing.
+  I am capable of expressing complex thoughts in simple terms, which I have used
+  in teaching and mentoring roles to great effect.
+</p>
+<p>
+  I am a skilled <em>learner</em>, capable of quickly and efficiently absorbing
+  information and processes, discerning when it is necessary to have a robust
+  theoretical framework and when it is more expedient to learn by steps. I
+  document my learning process such that my notes can be useful for future
+  learners.
+</p>
 
-  <p>
-    I am a good <em>team member</em>, who is aware of the capabilities and
-    bandwidth of my teammates and plans my own work for maximum utility. I
-    strive to have consistent output that can be relied upon confidently.
-  </p>
-  <hr />
-  <h1>EXPERIENCE</h1>
-  <p>
-    I currently work at PNC as an agile full stack developer, specializing in
-    Angular, Spring REST, and a micro frontend architecture based on web
-    components.
-  </p>
+<p>
+  I am a good <em>team member</em>, who is aware of the capabilities and
+  bandwidth of my teammates and plans my own work for maximum utility. I strive
+  to have consistent output that can be relied upon confidently.
+</p>
+<hr />
+<h1>EXPERIENCE</h1>
+<p>
+  I currently work at PNC as an agile full stack developer, specializing in
+  Angular, Spring REST, and a micro frontend architecture based on web
+  components.
+</p>
 
-  <p>
-    In the fall of 2019 I attended a 14-week coding boot camp at
-    <a href="https://www.techelevator.com/">Tech Elevator</a>, where I developed
-    a strong foundation in full-stack programming.
-  </p>
-  <p>
-    I was previously employed at
-    <a href="https://kerfcase.com">KerfCase LLC</a>. Kerf is a design firm,
-    specialty manufacturer, and e-commerce company that designs, makes and sells
-    fine wood goods. Our flagship product is an
-    <a href="https://kerfcase.com/products/iphone-xs-wood-case"
-      >all-wood phone case.</a
-    >
-  </p>
-
-  <p>
-    Prior to Kerf, I have worked at Google, Oracle, and Apple, in a variety of
-    roles. One of my mottos is "Versatility over Virtuosity"; in a world that
-    favors hyperspecialization, having a working knowledge of many domains can
-    be very valuable. I am equally at ease communicating technical requirements
-    to engineers as I am discussing business priorities with executives and
-    brainstorming with creatives.
-  </p>
-
-  <a routerLink="../projects">
-    <button type="button" name="projectsbutton">
-      <h6>See Projects</h6>
-    </button></a
+<p>
+  In the fall of 2019 I attended a 14-week coding boot camp at
+  <a href="https://www.techelevator.com/">Tech Elevator</a>, where I developed a
+  strong foundation in full-stack programming.
+</p>
+<p>
+  I was previously employed at
+  <a href="https://kerfcase.com">KerfCase LLC</a>. Kerf is a design firm,
+  specialty manufacturer, and e-commerce company that designs, makes and sells
+  fine wood goods. Our flagship product is an
+  <a href="https://kerfcase.com/products/iphone-xs-wood-case"
+    >all-wood phone case.</a
   >
+</p>
 
-  <hr />
-  <h1>HOBBIES</h1>
-  <p>
-    I'm a <em>musician</em>! I play a lot of instruments and enjoy a variety of
-    styles, but primarily I play bass and sing for Pittsburgh rock band
-    <a href="http://www.badcuster.com">Bad Custer</a>. I had fun making the
-    band's website, as well as an iOS app that's mostly done. In addition, I'm
-    looking forward to learning how to process sound programatically so I can
-    explore musical composition using computers.
-  </p>
-  <img src="assets/images/badcuster.jpg" alt="Bad Custer" class="img-content" />
-  <p>
-    I do most of the <em>cooking</em> in our household, and I'm always on the
-    lookout for new recipes, especially if it's Indian food, can be made in an
-    Instant Pot, or both!
-  </p>
+<p>
+  Prior to Kerf, I have worked at Google, Oracle, and Apple, in a variety of
+  roles. One of my mottos is "Versatility over Virtuosity"; in a world that
+  favors hyperspecialization, having a working knowledge of many domains can be
+  very valuable. I am equally at ease communicating technical requirements to
+  engineers as I am discussing business priorities with executives and
+  brainstorming with creatives.
+</p>
 
-  <a routerLink="../contact">
-    <button type="button" name="contactbutton">
-      <h6>Get In Touch</h6>
-    </button></a
-  >
-</div>
+<a routerLink="../projects">
+  <button type="button" name="projectsbutton">
+    <h6>See Projects</h6>
+  </button></a
+>
+
+<hr />
+<h1>HOBBIES</h1>
+<p>
+  I'm a <em>musician</em>! I play a lot of instruments and enjoy a variety of
+  styles, but primarily I play bass and sing for Pittsburgh rock band
+  <a href="http://www.badcuster.com">Bad Custer</a>. I had fun making the band's
+  website, as well as an iOS app that's mostly done. In addition, I'm looking
+  forward to learning how to process sound programatically so I can explore
+  musical composition using computers.
+</p>
+<img src="assets/images/badcuster.jpg" alt="Bad Custer" class="img-content" />
+<p>
+  I do most of the <em>cooking</em> in our household, and I'm always on the
+  lookout for new recipes, especially if it's Indian food, can be made in an
+  Instant Pot, or both!
+</p>
+
+<a routerLink="../contact">
+  <button type="button" name="contactbutton">
+    <h6>Get In Touch</h6>
+  </button></a
+>
