--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,3 +1,16 @@
 .container {
   padding: 0 10%;
 }
+
+.skillslist li {
+  text-align: left;
+  font-size: 50px;
+  line-height: 70px;
+}
+
+@media (min-device-width: 500px) {
+  .skillslist li {
+    font-size: 30px;
+    line-height: 40px;
+  }
+}
