about page no longer skinny

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,7 +40,7 @@
       <li><a routerLink="about" (click)="toggle()">ABOUT</a></li>
       <li><a routerLink="projects" (click)="toggle()">PROJECTS</a></li>
       <li><a routerLink="blog" (click)="toggle()">BLOG</a></li>
-      <li><a routerLInk="contact" (click)="toggle()">CONTACT</a></li>
+      <li><a routerLink="contact" (click)="toggle()">CONTACT</a></li>
     </ul>
   </nav>
 </div>
