push progress on dynamic markdown manipulation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,7 +55,9 @@
     </ul>
   </nav>
 </div>
-<router-outlet></router-outlet>
+<div class="router-container">
+  <router-outlet></router-outlet>
+</div>
 <footer>
   <a href="https://www.linkedin.com/in/philgiammattei/">
     <img
