attempt link fix

--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <markdown
     [src]="'assets/md/posts/' + md + '.md'"
-    (load)="onRender(event)"
+    (load)="onRender($event)"
   ></markdown>
   <hr />
 </div>
