--- a/src/app/post/post.component.scss
+++ b/src/app/post/post.component.scss
@@ -1,3 +1,13 @@
 .post-title {
   text-decoration: underline;
+  color: #fcfbe3;
+  font-family: "Play", sans-serif;
+}
+
+.post-title:hover {
+  color: #fcfbe3;
+}
+
+.post-title:visited {
+  color: #fcfbe3;
 }
