--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,22 @@ body {
   margin: auto;
 }
 
+code {
+  text-align: left;
+}
+
+pre {
+  text-align: left;
+  background-color: #111111;
+  padding: 5%;
+  margin-bottom: 2rem;
+  border-radius: 5px;
+}
+
+li {
+  text-align: left;
+}
+
 p,
 li,
 a {
