--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,12 @@ pre {
   padding: 5%;
   margin-bottom: 2rem;
   border-radius: 5px;
+  overflow-x: auto;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
 }
 
 li {
