clarivate/bio update, remove twitter

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,10 +9,10 @@
 
   <img class="img-content" src="assets/images/ghee.png" alt="ghee a MA tee" />
 
-  <h4>I live in Pittsburgh with my wife and two cats.</h4>
+  <h4>I live in Pittsburgh with my wife and daughter.</h4>
   <img
-    src="assets/images/selfie.jpg"
-    alt="Phil and Luree at the airport!"
+    src="assets/images/serious-family-portrait.jpg"
+    alt="A very serious family"
     class="img-content"
   />
   <hr />
@@ -20,12 +20,9 @@
   <h1>SKILLS</h1>
   <ul class="skillslist">
     <li>Angular</li>
-    <li>Spring REST</li>
     <li>CSS/SCSS</li>
     <li>JavaScript/TypeScript</li>
-    <li>React/React Native</li>
     <li>Shopify/Liquid</li>
-    <li>SwiftUI</li>
     <li>Agile/Scrum</li>
   </ul>
   <hr />
@@ -52,9 +49,12 @@
   <hr />
   <h1>EXPERIENCE</h1>
   <p>
-    I currently work at PNC as an agile full stack developer, specializing in
-    Angular, Spring REST, and a micro frontend architecture based on web
-    components.
+    I currently work at Clarivate, maintaining a shared frontend component
+    library and joining software teams to add frontend expertise.
+  </p>
+  <p>
+    Previously I was at PNC as a full stack developer, specializing in Angular,
+    Spring REST, and a micro frontend architecture based on web components.
   </p>
 
   <p>
@@ -66,7 +66,7 @@
     I was previously employed at
     <a href="https://kerfcase.com">KerfCase LLC</a>. Kerf is a design firm,
     specialty manufacturer, and e-commerce company that designs, makes and sells
-    fine wood goods. Our flagship product is an
+    fine wood goods. Their flagship product is an
     <a href="https://kerfcase.com/products/iphone-xs-wood-case"
       >all-wood phone case.</a
     >
